[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Utils.tscn" type="PackedScene" id=2]
[ext_resource path="res://NameGenerator.tscn" type="PackedScene" id=3]
[ext_resource path="res://Message.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFontData" id=1]

hinting = 2
font_path = "res://dodge_assets/fonts/Xolonium-Regular.ttf"
_sections_unfolded = [ "Resource" ]

[sub_resource type="DynamicFont" id=2]

size = 40
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFontData" id=3]

hinting = 2
font_path = "res://Arial Unicode.ttf"
_sections_unfolded = [ "Resource" ]

[sub_resource type="DynamicFont" id=4]

size = 36
use_mipmaps = false
use_filter = false
font_data = SubResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="GDScript" id=5]

script/source = "extends Label

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

var contents = []
var dur = 1.5
var interval = 3.5

func _ready():
	# Called when the node is added to the scene for the first time.
	# Initialization here
	hide()

#func _process(delta):
#	# Called every frame. Delta is time since last frame.
#	# Update game logic here.
#	pass

func show_message(content, dur=1):
	text = content
	show()
	$ShowTimer.wait_time = dur
	$ShowTimer.start()
	
func show_list_messages(messages, dur=1.5, interval=3.5):
	contents = messages
	dur = dur
	interval = interval
	show_single_message()

func show_single_message():
	text = contents[0]
	show()
	$ShowTimer.wait_time = dur
	$ShowTimer.start()
	

func _on_ShowTimer_timeout():
	hide()
	$WaitTimer.wait_time = interval
	$WaitTimer.start()
	


func _on_WaitTimer_timeout():
	contents.pop_front()
	if contents.size() > 0:
		show_single_message()
	
	"

[node name="Game" type="Node"]

script = ExtResource( 1 )

[node name="Score" type="Label" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 700.0
margin_top = 25.0
margin_right = 740.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="SpawnTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.5
one_shot = false
autostart = false

[node name="Utils" parent="." index="2" instance=ExtResource( 2 )]

[node name="NameGenerator" parent="." index="3" instance=ExtResource( 3 )]

[node name="AddScore" parent="." index="4" instance=ExtResource( 4 )]

margin_left = 360.0
margin_right = 482.0
align = 0

[node name="FPS" type="Label" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 27.0
margin_top = 21.0
margin_right = 67.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Units" type="Label" parent="." index="6"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 27.0
margin_top = 72.0
margin_right = 67.0
margin_bottom = 121.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Message" parent="." index="7" instance=ExtResource( 4 )]

margin_left = 190.0
margin_top = 100.0
margin_right = 585.0
margin_bottom = 169.0
custom_fonts/font = SubResource( 4 )
script = SubResource( 5 )

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]


